# MatHud

./: .gitignore  .project_architecture  .worktreeinclude  AGENT.md  LICENSE  README.md  app.py  documentation.txt  documentation2.txt  example_prompts.txt  generate_diagrams_launcher.py  launch_gui.html  mypy.ini  project_description_and_architecture.txt  pyproject.toml  requirements.txt  run_server_tests.py  selfassembler.yaml  todo.txt
.claude/: CLAUDE.md
Documentation/: Example Prompts.txt  Project Architecture.txt  Project Overview Table.txt  Reference Manual.txt  todo.txt
ServerTests/: __init__.py  python_path_setup.py  test_mocks.py  test_routes.py  test_workspace_management.py
Tests/: test_workspace_management.py
cli/: README.md  __init__.py  browser.py  canvas.py  chat.py  config.py  main.py  screenshot.py  server.py  tests.py  workspace.py
diagrams/: BRYTHON_DIAGRAMS_README.md  README.md  WORKFLOW_SUMMARY.md  diagram_requirements.txt
documentation/: Example Prompts.txt  Project Architecture.txt  Project Overview Table.txt  Reference Manual.txt  Roadmap.md  drawable_dependency_report.md  refactor_no_logic_change_plan.md  refactor_phase0_baseline.md  todo.txt
hooks/: pre-commit
scripts/: canvas_prompt_telemetry_report.py  compare_search_modes.py  linear_algebra_expected_values.py  run_tool_discovery_live.py  summarize_tool_discovery_results.py
server_tests/: __init__.py  python_path_setup.py  test_adaptive_sampler.py  test_ai_model.py  test_browser_typing_stubs.py  test_canvas_prompt_telemetry_report.py  test_canvas_state_summarizer.py  test_canvas_state_tool_schema.py  test_coordinate_mapper.py  test_coordinate_system_manager.py  test_descriptive_statistics_pure.py  test_function_renderable_paths.py  test_image_attachment.py  test_local_provider_base.py  test_log_manager.py  test_markdown_parser.py  test_mocks.py  test_numeric_integration_pure.py  test_ollama_api.py  test_ollama_integration.py  test_openai_api_base.py  test_openai_completions_api.py  test_openai_oauth.py  test_openai_responses_api.py  test_plot_tool_schemas.py  test_polar_conversion.py  test_polar_grid.py  test_position.py  test_prompt_pipeline.py  test_provider_connections.py  test_regression_pure.py  test_routes.py  test_routes_oauth.py  test_search_tool_wiring_smoke.py  test_series_pure.py  (+7 more)
(+416 files in other folders)
