[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathud"
version = "0.1.0"
description = "Mathematical canvas with AI assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "openai>=1.60.0",
    "anthropic>=0.40.0",
    "flask",
    "flask-session",
    "cachelib",
    "python-dotenv",
    "selenium",
    "geckodriver-autoinstaller",
    "requests",
    "kokoro>=0.9.4",
    "soundfile",
    "numpy",
    "click>=8.0.0",
    "webdriver-manager>=4.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy==1.11.2",
    "types-requests",
    "ruff>=0.8.0",
]

[project.scripts]
mathud = "cli.main:cli"

[tool.setuptools.packages.find]
include = ["cli*", "static*"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["hooks"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"static/client/**/*.py" = ["F401", "E402", "F811", "E722", "E731", "E741", "E701", "W191", "E101"]
"static/client/client_tests/**/*.py" = ["F841"]
"server_tests/**/*.py" = ["E402", "E741", "E731"]
"diagrams/**/*.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
